<resources>
    <string name="app_name" translatable="false">Transaction Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="paid_off">Paid off</string>
    <string name="paid_yet">Paid yet</string>
    <string name="login">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="joined_us_before">Joined us before?</string>
    <string name="verified_account">Verified Account</string>
    <string name="unverified_account">Unverified Account</string>
    <string name="info_revenue">Income of %1$s</string>
    <string name="info_revenue_with_month">Income of %1$s %2$s</string>
    <string name="greetings_name">Hi, %1$s!</string>
    <string name="list_of_transactions">Transaction List</string>
    <string name="visibility_no_data_info">There is no %1$s data %2$s</string>
    <string name="update">Update</string>
    <string name="edit_data_title">Edit Data %1$s</string>
    <string name="no_transaction_yet">No Transaction Yet!</string>
    <string name="back">Back</string>
    <string name="name_hint">Name</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="add_from_contact">Add from contact</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="today_s_transaction_date">Today\'s Transaction Date</string>
    <string name="save_btn">Save</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="success_to_mark">Success to mark as paid off</string>
    <string name="rupiah_s_edit_text">Rp%1$s</string>
    <string name="payed_off">Paid Off!</string>
    <string name="payed_over" formatted="true">Paid off and\nover %1$s</string>
    <string name="edit_title">Edit Data %1$s</string>
    <string name="go_to_whatsapp">Go to whatsApp</string>
    <string name="detail_customer">Detail Customer</string>
    <string name="delete_this_transaction">Delete this transaction?</string>
    <string name="change_data">Change Data</string>
    <string name="info_total_should_be_paid">Total should be paid:</string>
    <string name="payment_amount_title">Payment Amount</string>
    <string name="delete_number_of_payment_amount">Delete Number of Payment Amount</string>
    <string name="current_payment_amount">Current Payment Amount:</string>
    <string name="payment_left">Payment left:</string>
    <string name="info_amount_over">Amount of Payment is greater than Total Payment of %1$s</string>
    <string name="info_number_is_too_short">Number of customer is too short (No.telp: %1$s), do you want to change the data?</string>
    <string name="info_number_is_empty">Apparently you have not add any number, do you want to add one?</string>
    <string name="data_saved">Data Saved!</string>
    <string name="data_changed">Data Changed!</string>
    <string name="data_deleted">Data Deleted!</string>
    <string name="sign_up_success">Sign up Successful</string>
    <string name="data_inserted_success">Data Inserted Successfully</string>
    <string name="password_is_not_match">Password is not Matching</string>
    <string name="verified_account_info">Your account is verified!</string>
    <string name="check_email_info">Check your Email! (including Spam)</string>
    <string name="login_success">Login Successful</string>
    <string name="empty_field_info">Empty Fields Are no Allowed</string>
    <string name="invalid_empty_email_info">Invalid or Empty Email</string>
    <string name="you_can_add_transaction_below">You can add transactions below</string>
    <string name="print_data_transactions">Print Data Transactions</string>
    <string name="rp_revenue_info" translatable="false">Rp</string>
    <string name="there_is_no_all_categories_transaction_at_this_month">There is no All Categories transaction\nat This Month</string>
    <string name="search_hint">Search name here…</string>
    <string name="confirmation">Are you sure?</string>
    <string name="confirmation_info">Do you want to delete this transaction?</string>
    <string name="yes_answer">Yes</string>
    <string name="no_answer">No</string>
    <string name="total_transaction">Total Transaction: %1$s</string>
    <string name="due_date_notification_content">%1$s is due</string>
    <string name="transactions">Transactions</string>
    <string name="profile">Profile</string>
    <string name="over_paid">Over %1$s</string>
    <string name="still_left">Still %1$s left</string>
    <string name="messageLeftInfo">%1$s : %2$s left</string>
    <string name="messagePassInfo">%1$s has passed for %2$s months.</string>
    <string name="info_not_yet_full">Here are the customers who have not yet paid in full</string>
    <string name="message_invoice" translatable="false">Assalamu\'alaikum Wr. Wb.\n\nBapak/Ibu %1$s, maaf untuk tagihan WiFi pada periode %2$s-%3$s-nya sudah dapat dibayarkan 🙏\n\nUntuk total pembayaran sebesar %4$s, dapat melakukan Pembayaran Langsung (Uang Tunai) atau dapat mentransfer ke rekening bank (Mandiri) berikut:\n\nNo. Rek : 1560016057376\na/n : Dasriyah\n\nTerimakasih..</string>
    <string name="detail_messages">Detail Messages</string>
    <string name="blablabla" translatable="false">blablabla...</string>
    <string name="notification">Notification</string>

    <string-array name="filter_sort_by_periode">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
    </string-array>

    <string-array name="filter_sort_by_month">
        <item>All Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="filter_sort_by_status">
        <item>All Categories</item>
        <item>Paid off</item>
        <item>Paid yet</item>
    </string-array>
    <string name="empty_data">Empty Data</string>
    <string name="text_copied">Text copied to clipboard</string>
    <string name="is_today_transaction">Is today transaction? </string>
    <string name="no_notification_info">There is no notification</string>
    <string name="message_is_empty">Alhamdulillah there are no arrears</string>
    <string name="mark_as_paid_off">Mark as paid off</string>
    <string name="choose_action_info">Choose an action</string>
    <string name="cancel">cancel</string>
    <string name="you_choose_item_info">You choose %1$s that must paid for %2$s</string>
</resources>