<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.addtransaction.AddTransactionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginStart="14dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/add_transaction"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/appBar"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/name_hint"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/frameTilWhatsApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilName"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilWhatsApp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/edWhatsApp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_whatsapp_stroke"
                            android:drawablePadding="8dp"
                            android:ems="10"
                            android:fontFamily="@font/poppins_light"
                            android:hint="@string/whatsapp"
                            android:inputType="number"
                            android:maxLength="17"
                            android:textColor="@color/black"
                            tools:ignore="Autofill" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/ib_contact"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/white"
                        android:src="@drawable/ic_contact"
                        android:translationZ="5dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tilWhatsApp"
                        app:layout_constraintEnd_toEndOf="@+id/tilWhatsApp"
                        app:layout_constraintTop_toTopOf="@+id/tilWhatsApp"
                        android:contentDescription="@string/add_from_contact" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAmount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/frameTilWhatsApp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_money"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins_light"
                    android:maxLength="17"
                    android:hint="@string/payment_amount"
                    android:inputType="number"
                    android:textColor="@color/black"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilAmount"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_date"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:focusable="false"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/today_s_transaction_date"
                    android:inputType="date"
                    android:textColor="@color/black"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/save_btn"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/btn_rounded_green"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>